[package]
name = "p3-bls12-377-fr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true

num-bigint.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = { version = "1.5.0" }

# Feild
crrl = {git = "https://github.com/distributed-lab/crrl.git", branch = "feature/fix-mod-int-impl", features = ["modint256"]}
bytes = "1.10.0"

[dev-dependencies]
p3-field-testing.workspace = true

criterion.workspace = true
num-traits.workspace = true
serde_json.workspace = true

[features]
default = []

[[bench]]
name = "bench_field"
harness = false